--- a/designer/dialog.ui
+++ b/designer/dialog.ui
@@ -65,6 +65,9 @@
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
+       <property name="sortingEnabled">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="9" column="1">
