--- a/designer/dialog.ui
+++ b/designer/dialog.ui
@@ -111,6 +111,16 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Language</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="langComboBox"/>
+     </item>
     </layout>
    </item>
   </layout>
