--- a/designer/form.ui
+++ b/designer/form.ui
@@ -66,7 +66,7 @@
         <string>Import from a file of sentences separated by newlines</string>
        </property>
        <property name="text">
-        <string>Import sentences for selected word</string>
+        <string>Import sentences for selected words</string>
        </property>
       </widget>
      </item>
