Make refresh button spin when loading

--- a/src/web/incontext.css
+++ b/src/web/incontext.css
@@ -2,3 +2,17 @@
     cursor: pointer;
     width: 16px;
 }
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.incontext-loading {
+    animation: 3s linear 0s infinite spin;
+}
