--- a/ts/src/lib/sass/base.scss
+++ b/ts/src/lib/sass/base.scss
@@ -5,3 +5,8 @@
 
 $bootstrap-icons-font-dir: "bootstrap-icons/font/fonts";
 @import "bootstrap-icons/font/bootstrap-icons";
+
+body {
+    color: var(--fg);
+    background: var(--canvas);
+}
