--- a/ts/src/lib/css/base.css
+++ b/ts/src/lib/css/base.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 @plugin "daisyui" {
     themes: corporate --default, dark --prefersdark;
 }
